# papaya

./: Dockerfile  README.md  metadata-queries.yml  metadata_queries.yml  pyproject.toml
src/papaya/: __init__.py  errors.py  iiif2.py  server.py  source.py  web.py
tests/: test_iiif2.py
tests/iiif2/: test_iiif2.py  test_image_service.py
tests/source/: conftest.py  test_format_language_tags.py  test_format_value.py  test_repository_service.py  test_resource.py  test_solr_service.py  test_tagged_text.py
