[project]
name = "papaya"
version = "1.0.0-dev"
requires-python = ">= 3.14"
dependencies = [
    "click",
    "configurenv",
    "flask",
    "jq",
    "pysolr",
    "python-dotenv",
    "pyyaml",
    "requests",
    "waitress",
]

[dependency-groups]
test = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
papaya = "papaya.server:run"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
