[project]
name = "papaya"
version = "1.0.0-rc1"
requires-python = ">= 3.14"
dependencies = [
    "click",
    "configurenv",
    "flask",
    "jq",
    "pysolr",
    "python-dotenv",
    "pyyaml",
    "requests",
    "waitress",
]

[dependency-groups]
test = [
    "pytest",
    "pytest-cov",
    "ruff",
]
docs = [
    "pdoc",
]

[project.scripts]
papaya = "papaya.server:run"

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
